src/list/list.css
/*
 *  Created by Martin Giger
 *  Licensed under the MPL 2.0
 */
body {
    background-color: var(--inverted-bg);
    font-size: 12px;
    max-width: 400px;
}

section > div {
    padding: 0.2em 0;
}

ul {
    margin: 0;
    padding: 0;
}

a {
    margin: 0;
}

nav {
    position: sticky;
    top: 0;
    z-index: 10;
}

.topbar a,
.topbar button {
    padding: 0.5em;
    height: 2.2em;
}

.searchField,
.exploreprovider {
    width: 100%;
}

.searchField {
    display: block;
}

.exploreprovider {
    position: sticky;
    top: 2.2em;
}

.tabcontent {
    padding: 0;
    margin: 0;
    background-color: var(--inverted-bg);
    color: var(--inverted-text);
}

.tabcontent > ul > li {
    padding: 0;
    margin: 0;
    list-style: none;
    cursor: context-menu;
    display: block;
}

.tabcontent > ul > li div,
.tabcontent > span {
    padding: 0.3em;
}

.tabcontent > ul > li div img {
    margin-right: 0.3em;
    float: left;
}

.tabcontent > ul > li div {
    min-height: 1em;
}

.tabcontent > ul > li div.compcat img {
    vertical-align: text-bottom;
    width: 1em;
    height: 1em;
}

.tabcontent > ul > li div:not(.compact) {
    min-height: 30px;
}

.tabcontent > ul > li > img {
    width: 100%;
    display: block;
}

.tabcontent > ul > li.thumbnail {
    position: relative;
    width: 100%;
}

.tabcontent > ul > li.thumbnail div {
    position: absolute;
    width: calc(100% - 0.6em);
    bottom: 0;
}

.tabcontent > ul > li div:not(.compact) > img {
    width: 30px;
    height: 30px;
    vertical-align: middle;
}

.tabcontent aside {
    display: block !important;
    visibility: visible;
    opacity: 0.7;
}

.tabcontent aside li:not(:last-child) {
    padding-right: 0.3em;
}

.icon {
    display: inline-block;
    height: 0.9em;
    width: 0.9em;
    fill: currentColor;
}

.redirecting .redirectors {
    display: inline-block;
}

.tabcontent .redirecting .redirectors li {
    height: 1em;
    width: 1em;
    margin: 0;
    vertical-align: baseline;
    padding: 0 0.1em;
    min-height: 1em;
    display: inline-block;
}

.tabcontent .redirecting .redirectors li:first-child {
    padding-left: 0;
}

.tabcontent .redirecting .redirectors li > div {
    background: none;
    position: static;
    width: 1em;
    padding: 0;
}

.tabcontent .redirecting .redirectors li div > img {
    height: 1em;
    width: 1em;
    filter: none;
}

.type0 .nonlive div > img,
.tabcontent:not(.type3) .external div > img {
    filter: grayscale(100%);
}

/* Type specific styles */

.tabcontent > ul > li {
    --channel-text-color: var(--inverted-text);
    --channel-bg-color-r: 255;
    --channel-bg-color-g: 255;
    --channel-bg-color-b: 255;
}

.thumbnail div {
    background: rgba(var(--channel-bg-color-r), var(--channel-bg-color-g), var(--channel-bg-color-b), 0.7);
    color: var(--channel-text-color);
}

.tabcontent > ul > li:hover,
.thumbnail:hover div {
    background: rgb(var(--channel-bg-color-r), var(--channel-bg-color-g), var(--channel-bg-color-b)) !important;
    color: var(--channel-text-color) !important;
}

.tabcontent > ul > .twitch {
    --channel-bg-color-r: 117;
    --channel-bg-color-g: 80;
    --channel-bg-color-b: 186;
    --channel-text-color: white;
}

.tabcontent > ul > .hitbox {
    --channel-bg-color-r: 255;
    --channel-bg-color-g: 255;
    --channel-bg-color-b: 255;
    --channel-text-color: #133c65;
}

.tabcontent > ul > .ustream {
    --channel-text-color: #303030;
    --channel-bg-color-r: 250;
    --channel-bg-color-g: 250;
    --channel-bg-color-b: 250;
}

.tabcontent > ul > .ustream:hover,
.thumbnail.ustream:hover div {
    background:
        linear-gradient(
            to bottom,
            white 80%,
            #fafafa 100%
        ) !important;
}

.tabcontent > ul > .youtube {
    --channel-bg-color-r: 204;
    --channel-bg-color-g: 24;
    --channel-bg-color-b: 30;
    --channel-text-color: white;
}

.tabcontent > ul > .youtube:hover,
.thumbnail.youtube:hover div {
    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.25);
}

.tabcontent > ul > .livestream {
    --channel-text-color: white;
    --channel-bg-color-r: 59;
    --channel-bg-color-g: 59;
    --channel-bg-color-b: 59;
}

.thumbnail.livestream div {
    background:
        linear-gradient(
            to bottom,
            rgba(59, 59, 59, 0.7) 0%,
            rgba(56, 56, 56, 0.7) 16%,
            rgba(30, 30, 30, 0.7) 80%,
            rgba(25, 25, 25, 0.7) 98%,
            rgba(0, 0, 0, 0.7) 100%
        );
}

.tabcontent > ul > .livestream:hover,
.thumbnail.livestream:hover div {
    background:
        linear-gradient(
            to bottom,
            rgb(59, 59, 59) 0%,
            rgb(56, 56, 56) 16%,
            rgb(30, 30, 30) 80%,
            rgb(25, 25, 25) 98%,
            black 100%
        ) !important;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
}

.tabcontent > ul > .mlg {
    --channel-bg-color-r: 60;
    --channel-bg-color-g: 125;
    --channel-bg-color-b: 230;
    --channel-text-color: white;
}

.tabcontent > ul > .beam {
    --channel-bg-color-r: 17;
    --channel-bg-color-g: 19;
    --channel-bg-color-b: 27;
    --channel-text-color: white;
}

.tabcontent > ul > .picarto {
    --channel-bg-color-r: 37;
    --channel-bg-color-g: 49;
    --channel-bg-color-b: 63;
    --channel-text-color: white;
}

.tabcontent > ul > .newlivestream {
    --channel-text-color: #cf202e;
}

.tabcontent > ul > .streamup {
    --channel-text-color: rgb(85, 98, 255);
}

.tabcontent > ul > .douyutv {
    --channel-bg-color-r: 255;
    --channel-bg-color-g: 119;
    --channel-bg-color-b: 0;
    --channel-text-color: white;
}

.tabcontent > ul > .dailymotion {
    --channel-bg-color-r: 0;
    --channel-bg-color-g: 102;
    --channel-bg-color-b: 220;
    --channel-text-color: white;
}

/* Context panel */
.context-panel {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    background: var(--inverted-bg);
    color: var(--inverted-text);
    border: none;
    width: 100%;
    min-height: 100%;
    z-index: 11;
    font-size: 1rem;
    padding: 0;
}

.context-panel button {
    appearance: none;
    background: var(--inverted-bg);
    border: none;
}

.context-panel button:hover,
.context-panel button:active,
.context-panel button:focus {
    background: var(--accent-light-bg);
    color: var(--accent-light-text);
}

.context-panel header button,
.context-panel header h1 {
    display: inline-block;
    font-size: 2em;
    font-weight: normal;
}

.context-panel header button {
    margin-right: 0.5em;
}

.context-panel ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    width: 100%;
}

.context-panel ul li {
    display: block;
    width: 100%;
    padding: 0;
    margin: 0;
}

.context-panel ul button {
    display: block;
    padding: 0.5em 1em;
    width: 100%;
    text-align: left;
}

